# ollama-mcp-server

./: .gitignore  .gitkeep  README.md  agent_workflow_launcher.py  debug_server.py  example_claude_desktop_config.json  example_fastagent.config.yaml  example_of_bad_ai_gen_mcp_config_do_not_use.json  fastagent.config.yaml  fastagent.jsonl  introspect_fastmcp.py  ollama-fastagent-guide.md  pyproject.toml  test_prompts.py  verify_prompts.py
.fastagent/: config.yaml
Adaptive Socio-Emotional Knowledge Ecosystem/: ASEKE Cognitive Architecture: (Adaptive .md  demo output ollama run sap3e-aseke-qwen3:30b-a3b.md  questions.md  sap3e_aseke_system_prompt.md
Adaptive Socio-Emotional Knowledge Ecosystem/modelfiles/: ASEKE-Qwen-Modelfile  ai-writer-toolkit-qwen-modelfile  devstral_modelfile  (+2 more)
fast-agent-scripts/: basic_agent.py  basic_ollama.py  chain_workflow.py  clean_integration.py  code_execution_workflow_workflow.py  content_optimizer.py  dataset_analyzer.py  demo_chain_workflow.py  demo_fix.py  embedded_agent.py  fastagent.jsonl  final_test.py  minimal_integration.py  model_ensemble_workflow.py  my_script.py  ollama_research_agent.py  ollama_with_tools.py  polymath_workflow.py  promptwright_coordinator.py  research_summary_agent.py
prompts/: prompt_templates_guide.md  setup_guide.md  tool_usage_guide.md
scripts/: chain_workflow.py  demo_script.txt
tests/: check_fastagent.py  check_fastagent2.py  config_test.py  direct_ollama_test.py  mcp_demo.py  quick_test.txt  test_agent.py  test_agent_v2.py  test_agent_v3.py  test_clean_output.py  test_config.yaml
(+23 files in other folders)
