[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ollama-mcp-server"
version = "0.1.0"
description = "MCP server for running Ollama models with async support"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "mcp>=1.6.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.1.0",
    "fast-agent-mcp>=0.2.21",
    "promptwright>=1.3.1",
]

[project.optional-dependencies]
dev = [
    "black>=23.3.0",
    "isort>=5.12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["ollama_mcp_server"]
